Fixed text and spacing

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -31,16 +31,16 @@
  * Update the foundational and global aspects of the page.
  */
 
-@font-face {
+/* @font-face {
   font-family: roboto;
   src: url(RobotoMono-VariableFont_wght.ttf);
   font-display: swap;
-}
+} */
 
 html {
   /* font-family: "PT Sans", Helvetica, Arial, sans-serif; */
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-  font-family: roboto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  /* font-family: roboto; */
 }
 @media (min-width: 48em) {
   html {
@@ -186,11 +186,11 @@ a.sidebar-nav-item:focus {
 
 /* Red */
 .theme-base-08 .sidebar {
-  background-color: #ac4142;
+  background-color: #A51C30;
 }
 .theme-base-08 .content a,
 .theme-base-08 .related-posts li a:hover {
-  color: #ac4142;
+  color: #A51C30;
 }
 
 /* Orange */
